[package]
name = "is-it-taken"
version = "1.0.1"
description = "Check If npm package name is already taken"
authors = ["BRAVO68WEB"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.7.1"
napi = "2"
napi-derive = "2"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true

[patch.crates-io]
ring = { git = "https://github.com/awakecoding/ring", branch = "0.16.20_alpha" }